test/expected/declare_o_colon2_rk_rk.out
struct S; declare :: as operator (reference to S) returning reference to S
         ^
10: error: operator :: can not be overloaded
